--- a/index.html
+++ b/index.html
@@ -3,41 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Torben Scharling | Pro Tech Consulting</title>
+    <title>Gem Experience | Pro Tech Consulting</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="lang-switch">
+        <a href="index.html" class="active">🇺🇸</a>
+        <a href="index-dk.html">🇩🇰</a>
+    </div>
+
     <header>
-        <h1>Torben Scharling | Pro Tech Consultation</h1>
-        <p class="tagline">Over 20 års teknisk erfaring – Specialiseret i Apple Pro Audio/Video og IT-support.</p>
+        <h1>Gem Experience | Pro Tech Consultation</h1>
+        <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book 1-hour consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
     </header>
 
     <main>
         <section id="service">
-            <h2>1-Times Teknisk Rådgivning for Professionelle</h2>
-            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Jeg hjælper dig med at løse komplekse tekniske udfordringer, optimere dit workflow eller træffe de rigtige hardware/software beslutninger.</p>
+            <h2>1-Hour Technical Consultation for Professionals</h2>
+            <p>Access deep expertise without commitment. I help you solve complex technical issues, optimize your workflow, and make the right hardware/software investment decisions.</p>
             
             <ul>
-                <li><strong>Apple Pro Software:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton.</li>
-                <li><strong>Systemoptimering:</strong> Rådgivning om Mac/Windows opsætning for stabil produktion.</li>
-                <li><strong>Fejlfinding:</strong> Hurtig løsning på de problemer, supporten ikke kan klare.</li>
-                <li><strong>Uafhængig Konsultation:</strong> Få uvildige råd baseret på fakta, ikke salg.</li>
+                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton, Reaper.</li>
+                <li><strong>System Optimization:</strong> Rigs, hybrid setups (analog/digital), and system stability advice.</li>
+                <li><strong>Gear & Investment:</strong> Unbiased consultation on what to buy next or how to utilize existing gear.</li>
+                <li><strong>Advanced Troubleshooting:</strong> Rapid solutions for complex problems Tier 1 support can't handle.</li>
             </ul>
 
             <div class="pricing">
-                <h3>Pris: DKK [INDSÆT PRIS] for 60 minutter</h3>
-                <p>Betal forud og book din tid direkte.</p>
+                <h3>Price: DKK [INSERT PRICE HERE] for 60 minutes</h3>
+                <p>Payment required upfront to book your slot.</p>
             </div>
 
             <div class="cta">
-                <a href="[INDSÆT BOOKING LINK HER]" class="button">BOOK DIN TID NU</a>
-                <p class="note">Vi aftaler mødet online (Teams/Zoom/etc.) efter betaling er registreret.</p>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=1-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=[INSERT PRICE AMOUNT HERE]" class="button" target="_blank">Pay with PayPal and Book Now</a>
+                <p class="note">After payment, you will be contacted to schedule your meeting (Teams/Zoom/etc.).</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Torben Scharling. Kontakt: GemExperience@icloud.com</p>
+        <p>&copy; 2024 Gem Experience. Contact: GemExperience@icloud.com</p>
     </footer>
 </body>
 </html>
