--- a/index.html
+++ b/index.html
@@ -19,25 +19,56 @@
 
     <main>
         <section id="service">
-            <h2>1-Hour Technical Consultation for Professionals</h2>
-            <p>Access deep expertise without commitment. I help you solve complex technical issues, optimize your workflow, and make the right hardware/software investment decisions.</p>
+            <h2>Technical Consultation Sessions</h2>
+            <p>Access deep expertise without commitment. I help you solve complex technical issues, optimize your workflow, and make the right hardware/software investment decisions. All prices include necessary contributions for pension/insurance overhead.</p>
             
             <ul>
-                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton, Reaper.</li>
+                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton, Reaper, Nuendo.</li>
                 <li><strong>System Optimization:</strong> Rigs, hybrid setups (analog/digital), and system stability advice.</li>
                 <li><strong>Gear & Investment:</strong> Unbiased consultation on what to buy next or how to utilize existing gear.</li>
                 <li><strong>Advanced Troubleshooting:</strong> Rapid solutions for complex problems Tier 1 support can't handle.</li>
             </ul>
 
-            <div class="pricing">
-                <h3>Price: DKK [INSERT PRICE HERE] for 60 minutes</h3>
-                <p>Payment required upfront to book your slot.</p>
+            <div class="pricing-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Session Length</th>
+                            <th>Consultation Time</th>
+                            <th>Investment (DKK)</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>15 Minutes</td>
+                            <td>15 min</td>
+                            <td>200.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=200.00" class="button-small" target="_blank">Pay & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>30 Minutes</td>
+                            <td>30 min</td>
+                            <td>400.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">Pay & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>**60 Minutes (Standard)**</td>
+                            <td>60 min</td>
+                            <td>800.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">Pay & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>**2 Hours (Discounted)**</td>
+                            <td>110 min (50 min + 10 min break + 50 min)</td>
+                            <td>1440.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">Pay & Book</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
-            <div class="cta">
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=1-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=[INSERT PRICE AMOUNT HERE]" class="button" target="_blank">Pay with PayPal and Book Now</a>
-                <p class="note">After payment, you will be contacted to schedule your meeting (Teams/Zoom/etc.).</p>
-            </div>
+            <p class="note">Payment is required upfront to secure your slot. After payment, you will be contacted to schedule your meeting (Teams/Zoom/etc.).</p>
         </section>
     </main>
 
