Update service section and pricing details

--- a/index-dk.html
+++ b/index-dk.html
@@ -19,25 +19,56 @@
 
     <main>
         <section id="service">
-            <h2>1-Times Teknisk Rådgivning for Professionelle</h2>
-            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Jeg hjælper dig med at løse komplekse tekniske udfordringer, optimere dit workflow og træffe de rigtige investeringsbeslutninger om hardware/software.</p>
+            <h2>Tekniske Rådgivningssessioner</h2>
+            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Jeg hjælper dig med at løse komplekse tekniske udfordringer, optimere dit workflow og træffe de rigtige investeringsbeslutninger om hardware/software. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
             
             <ul>
-                <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton, Reaper.</li>
+                <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Final Cut Pro, Premiere Pro, Ableton, Reaper, Nuendo.</li>
                 <li><strong>Systemoptimering:</strong> Rigs, hybrid-setups (analog/digital) og rådgivning om systemstabilitet.</li>
                 <li><strong>Udstyr & Investering:</strong> Uvildig konsultation om, hvad du skal købe næst, eller hvordan du bruger dit eksisterende udstyr bedst.</li>
                 <li><strong>Avanceret Fejlfinding:</strong> Hurtig løsning på komplekse problemer, som Tier 1 support ikke kan håndtere.</li>
             </ul>
 
-            <div class="pricing">
-                <h3>Pris: DKK [INDSÆT PRIS HER] for 60 minutter</h3>
-                <p>Betaling skal ske forud for at booke din tid.</p>
+            <div class="pricing-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Sessionslængde</th>
+                            <th>Konsultationstid</th>
+                            <th>Investering (DKK)</th>
+                            <th>Handling</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>15 Minutter</td>
+                            <td>15 min</td>
+                            <td>200.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=200.00" class="button-small" target="_blank">Betal & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>30 Minutter</td>
+                            <td>30 min</td>
+                            <td>400.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">Betal & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>**60 Minutter (Standard)**</td>
+                            <td>60 min</td>
+                            <td>800.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">Betal & Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>**2 Timer (Med Rabat)**</td>
+                            <td>110 min (50 min + 10 min pause + 50 min)</td>
+                            <td>1440.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Timers%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">Betal & Book</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
-            <div class="cta">
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=1-Times%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=[INDSÆT PRIS AMOUNT HER]" class="button" target="_blank">Betal med PayPal og Book Nu</a>
-                <p class="note">Efter betaling kontaktes du for at aftale tidspunkt for dit møde (Teams/Zoom/etc.).</p>
-            </div>
+            <p class="note">Betaling er påkrævet forud for at sikre din tid. Efter betaling kontaktes du for at aftale tidspunkt for dit møde (Teams/Zoom/etc.).</p>
         </section>
     </main>
 
