Update pricing and consultation details in index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <p>Access deep expertise without commitment. I help you solve complex technical issues, optimize your workflow, and make the right hardware/software investment decisions. All prices include necessary contributions for pension/insurance overhead.</p>
             
             <ul>
-                <li><strong>Pro Software Mastery:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
-                <li><strong>System Optimization:</strong> Rigs, hybrid setups (analog/digital), and system stability advice.</li>
-                <li><strong>Gear & Investment:</strong> Unbiased consultation on what to buy next or how to utilize existing gear.</li>
-                <li><strong>Advanced Troubleshooting:</strong> Solutions for complex problems Tier 1 support can't handle.</li>
+                <li>Pro Software Mastery: Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
+                <li>System Optimization: Rigs, hybrid setups (analog/digital), and system stability advice.</li>
+                <li>Gear & Investment: Unbiased consultation on what to buy next or how to utilize existing gear.</li>
+                <li>Advanced Troubleshooting: Solutions for complex problems Tier 1 support can't handle.</li>
             </ul>
 
             <div class="pricing-table">
@@ -35,39 +35,39 @@
                         <tr>
                             <th>Session Length</th>
                             <th>Consultation Time</th>
-                            <th>Investment (DKK)</th>
+                            <th>Price (USD)</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>**5 Minutes (Pre-Call Inquiry)**</td>
+                            <td>5 Minutes (Pre-Call Inquiry)</td>
                             <td>5 min</td>
-                            <td>100.00</td>
+                            <td>14.50</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=100.00" class="button-small" target="_blank">PAY</a></td>
                         </tr>
                         <tr>
                             <td>15 Minutes</td>
                             <td>15 min</td>
-                            <td>200.00</td>
+                            <td>29.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=200.00" class="button-small" target="_blank">PAY</a></td>
                         </tr>
                         <tr>
                             <td>30 Minutes</td>
                             <td>30 min</td>
-                            <td>400.00</td>
+                            <td>58.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">PAY</a></td>
                         </tr>
                         <tr>
-                            <td>**60 Minutes (Standard)**</td>
+                            <td>60 Minutes (Standard)</td>
                             <td>60 min</td>
-                            <td>800.00</td>
+                            <td>115.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">PAY</a></td>
                         </tr>
                         <tr>
-                            <td>**2 Hours (Discounted)**</td>
+                            <td>2 Hours (Discounted)</td>
                             <td>110 min (50 min + 10 min break + 50 min)</td>
-                            <td>1440.00</td>
+                            <td>207.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">PAY</a></td>
                         </tr>
                     </tbody>
