--- a/index-dk.html
+++ b/index-dk.html
@@ -23,10 +23,10 @@
             <p>Få adgang til dybdegående ekspertise uden forpligtelser. Jeg hjælper dig med at løse komplekse tekniske udfordringer, optimere dit workflow og træffe de rigtige investeringsbeslutninger om hardware/software. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
             
             <ul>
-                <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
-                <li><strong>Systemoptimering:</strong> Rigs, hybrid-setups (analog/digital) og rådgivning om systemstabilitet.</li>
-                <li><strong>Udstyr & Investering:</strong> Uvildig konsultation om, hvad du skal købe næst, eller hvordan du bruger dit eksisterende udstyr bedst.</li>
-                <li><strong>Avanceret Fejlfinding:</strong> Løsninger på komplekse problemer, som Tier 1 support ikke kan håndtere.</li>
+                <li>Pro Software Ekspertise: Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
+                <li>Systemoptimering: Rigs, hybrid-setups (analog/digital) og rådgivning om systemstabilitet.</li>
+                <li>Udstyr & Investering: Uvildig konsultation om, hvad du skal købe næst, eller hvordan du bruger dit eksisterende udstyr bedst.</li>
+                <li>Avanceret Fejlfinding: Løsninger på komplekse problemer, som Tier 1 support ikke kan håndtere.</li>
             </ul>
 
             <div class="pricing-table">
@@ -35,13 +35,13 @@
                         <tr>
                             <th>Sessionslængde</th>
                             <th>Konsultationstid</th>
-                            <th>Investering (DKK)</th>
+                            <th>Price (DKK)</th>
                             <th>Handling</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>**5 Minutter (Pre-Call Forespørgsel)**</td>
+                            <td>5 Minutter (Pre-Call Forespørgsel)</td>
                             <td>5 min</td>
                             <td>100.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=100.00" class="button-small" target="_blank">BETAL</a></td>
@@ -59,13 +59,13 @@
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">BETAL</a></td>
                         </tr>
                         <tr>
-                            <td>**60 Minutter (Standard)**</td>
+                            <td>60 Minutter (Standard)</td>
                             <td>60 min</td>
                             <td>800.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">BETAL</a></td>
                         </tr>
                         <tr>
-                            <td>**2 Timer (Med Rabat)**</td>
+                            <td>2 Timer (Med Rabat)</td>
                             <td>110 min (50 min + 10 min pause + 50 min)</td>
                             <td>1440.00</td>
                             <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Timers%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">BETAL</a></td>
