--- a/index-dk.html
+++ b/index-dk.html
@@ -14,13 +14,13 @@
 
     <header>
         <h1>Gem Experience | Professionel Tech Rådgivning</h1>
-        <p class="tagline">20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion (Logic, Ableton, VST/VSTi). Book 1-times konsultation til dybdegående fejlfinding, systemoptimering og afgørende rådgivning om udstyrsinvesteringer. Få specialistvejledning til dit fulde tekniske setup.</p>
+        <p class="tagline">20+ års ekspertise inden for Pro Audio/Video & Hybrid Analog/Digital produktion (Logic, Ableton, VST/VSTi). Book konsultation til dybdegående fejlfinding, systemoptimering og afgørende rådgivning om udstyrsinvesteringer. Få specialistvejledning til dit fulde tekniske setup.</p>
     </header>
 
     <main>
         <section id="service">
             <h2>Tekniske Rådgivningssessioner</h2>
-            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Jeg hjælper dig med at løse komplekse tekniske udfordringer, optimere dit workflow og træffe de rigtige investeringsbeslutninger om hardware/software. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
+            <p>Få adgang til dybdegående ekspertise uden forpligtelser. Korte sessioner har en merpris for at kompensere for tidsforbruget. Større bookinger modtager rabat. Alle priser inkluderer nødvendige bidrag til pension/forsikringsoverhead.</p>
             
             <ul>
                 <li><strong>Pro Software Ekspertise:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
@@ -34,7 +34,7 @@
                     <thead>
                         <tr>
                             <th>Sessionslængde</th>
-                            <th>Konsultationstid</th>
+                            <th>Total Tidsblok (Inkl. Pauser)</th>
                             <th>Price (DKK)</th>
                             <th>Handling</th>
                         </tr>
@@ -43,38 +43,59 @@
                         <tr>
                             <td>5 Minutter (Pre-Call Forespørgsel)</td>
                             <td>5 min</td>
-                            <td>100.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=100.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td>120.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Ud / Book</a></td>
                         </tr>
                         <tr>
                             <td>15 Minutter</td>
                             <td>15 min</td>
-                            <td>200.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=200.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td>250.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Ud / Book</a></td>
                         </tr>
                         <tr>
                             <td>30 Minutter</td>
                             <td>30 min</td>
-                            <td>400.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td>450.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Ud / Book</a></td>
                         </tr>
                         <tr>
-                            <td>60 Minutter (Standard)</td>
-                            <td>60 min</td>
-                            <td>800.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td>50 Minutter (Standard)</td>
+                            <td>50 min</td>
+                            <td>650.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Ud / Book</a></td>
                         </tr>
                         <tr>
-                            <td>2 Timer (Med Rabat)</td>
-                            <td>110 min (50 min + 10 min pause + 50 min)</td>
-                            <td>1440.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Timers%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td>2 Timer (Rabat)</td>
+                            <td>110 min (2x50 min konsultation + 10 min pause)</td>
+                            <td>1250.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>3 Timer (Rabat)</td>
+                            <td>170 min (3x50 min konsultation + 2x10 min pauser)</td>
+                            <td>1800.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>4 Timer (Rabat)</td>
+                            <td>230 min (4x50 min konsultation + 3x10 min pauser)</td>
+                            <td>2300.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>8 Timer (Heldags Rabat)</td>
+                            <td>470 min (8x50 min konsultation + 7x10 min pauser)</td>
+                            <td>4400.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Ud / Book</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <p class="note">Betaling er påkrævet forud for at sikre din tid. Efter betaling kontaktes du for at aftale tidspunkt for dit møde (Teams/Zoom/etc.).</p>
+            <div class="note-important">
+                <strong>Booking Skema:</strong> Betaling er påkrævet forud for at sikre din tid. Efter betaling modtager du en bekræftelse og et direkte link til en kalender for at aftale dit møde (Teams/Zoom/etc.).
+            </div>
+            <p class="note">For at strømline din booking og give klienter et klart skema, anbefaler jeg kraftigt at tilmelde dig en tjeneste som Calendly eller Acuity. Du kan derefter erstatte instruktionerne ovenfor med et direkte link til din bookingside.</p>
         </section>
     </main>
 
