--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <header>
         <h1>Gem Experience | Pro Tech Consultation</h1>
-        <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book 1-hour consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
+        <p class="tagline">20+ yrs expert in Pro Audio/Video & Hybrid Analog/Digital Production (Logic, Ableton, VST/VSTi). Book consultation for deep troubleshooting, system optimization, and crucial gear investment/buying advice. I find the complex solutions you need. Specialist guidance for your full technical setup.</p>
     </header>
 
     <main>
         <section id="service">
             <h2>Technical Consultation Sessions</h2>
-            <p>Access deep expertise without commitment. I help you solve complex technical issues, optimize your workflow, and make the right hardware/software investment decisions. All prices include necessary contributions for pension/insurance overhead.</p>
+            <p>Access deep expertise without commitment. Short sessions carry a premium to compensate for the time overhead. Bulk bookings receive a discount. All prices include necessary contributions for pension/insurance overhead.</p>
             
             <ul>
                 <li><strong>Pro Software Mastery:</strong> Logic Pro X, Ableton, Reaper, Open Broadcaster Studio (OBS), Windows 10, Nuendo, Final Cut Pro, Premiere Pro.</li>
@@ -34,7 +34,7 @@
                     <thead>
                         <tr>
                             <th>Session Length</th>
-                            <th>Consultation Time</th>
+                            <th>Total Block Time (Includes Breaks)</th>
                             <th>Price (USD)</th>
                             <th>Action</th>
                         </tr>
@@ -43,38 +43,59 @@
                         <tr>
                             <td>5 Minutes (Pre-Call Inquiry)</td>
                             <td>5 min</td>
-                            <td>14.50</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=100.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td>17.27</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Out / Book</a></td>
                         </tr>
                         <tr>
                             <td>15 Minutes</td>
                             <td>15 min</td>
-                            <td>29.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=200.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td>35.97</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Out / Book</a></td>
                         </tr>
                         <tr>
                             <td>30 Minutes</td>
                             <td>30 min</td>
-                            <td>58.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=400.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td>64.75</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Out / Book</a></td>
                         </tr>
                         <tr>
-                            <td>60 Minutes (Standard)</td>
-                            <td>60 min</td>
-                            <td>115.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=60-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=800.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td>50 Minutes (Standard)</td>
+                            <td>50 min</td>
+                            <td>93.50</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Out / Book</a></td>
                         </tr>
                         <tr>
                             <td>2 Hours (Discounted)</td>
-                            <td>110 min (50 min + 10 min break + 50 min)</td>
-                            <td>207.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1440.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td>110 min (2x50 min consult + 10 min break)</td>
+                            <td>179.85</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>3 Hours (Discounted)</td>
+                            <td>170 min (3x50 min consult + 2x10 min breaks)</td>
+                            <td>259.00</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>4 Hours (Discounted)</td>
+                            <td>230 min (4x50 min consult + 3x10 min breaks)</td>
+                            <td>330.95</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                        </tr>
+                        <tr>
+                            <td>8 Hours (Full Day Discount)</td>
+                            <td>470 min (8x50 min consult + 7x10 min breaks)</td>
+                            <td>633.10</td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Out / Book</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <p class="note">Payment is required upfront to secure your slot. After payment, you will be contacted to schedule your meeting (Teams/Zoom/etc.).</p>
+            <div class="note-important">
+                <strong>Booking Schedule:</strong> Payment is required upfront to secure your slot. After payment, you will receive a confirmation and a direct link to a calendar to schedule your meeting (Teams/Zoom/etc.).
+            </div>
+            <p class="note">To streamline your bookings and provide clients with a clear schedule, I strongly recommend signing up for a service like Calendly or Acuity. You can then replace the instructions above with a direct link to your scheduling page.</p>
         </section>
     </main>
 
