Revise booking schedule and update year in footer
Updated booking instructions and payment details.

--- a/index.html
+++ b/index.html
@@ -44,63 +44,60 @@
                             <td>5 Minutes (Pre-Call Inquiry)</td>
                             <td>5 min</td>
                             <td>17.27</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>15 Minutes</td>
                             <td>15 min</td>
                             <td>35.97</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>30 Minutes</td>
                             <td>30 min</td>
                             <td>64.75</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>50 Minutes (Standard)</td>
                             <td>50 min</td>
                             <td>93.50</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>2 Hours (Discounted)</td>
                             <td>110 min (2x50 min consult + 10 min break)</td>
                             <td>179.85</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>3 Hours (Discounted)</td>
                             <td>170 min (3x50 min consult + 2x10 min breaks)</td>
                             <td>259.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>4 Hours (Discounted)</td>
                             <td>230 min (4x50 min consult + 3x10 min breaks)</td>
                             <td>330.95</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                         <tr>
                             <td>8 Hours (Full Day Discount)</td>
                             <td>470 min (8x50 min consult + 7x10 min breaks)</td>
                             <td>633.10</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Out / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Out</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <div class="note-important">
-                <strong>Booking Schedule:</strong> Payment is required upfront to secure your slot. After payment, you will receive a confirmation and a direct link to a calendar to schedule your meeting (Teams/Zoom/etc.).
-            </div>
-            <p class="note">To streamline your bookings and provide clients with a clear schedule, I strongly recommend signing up for a service like Calendly or Acuity. You can then replace the instructions above with a direct link to your scheduling page.</p>
+            <p class="note"><strong>Booking Schedule:</strong> Payment is required upfront via PayPal. After payment, you will receive confirmation and a direct email to finalize the appointment time. You can use any personal scheduling tools like Google Calendar or iPhone Calendar to manage your availability.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Gem Experience. Contact: GemExperience@icloud.com</p>
+        <p>&copy; 2025 Gem Experience. Contact: GemExperience@icloud.com</p>
     </footer>
 </body>
 </html>
