--- a/index-dk.html
+++ b/index-dk.html
@@ -44,63 +44,60 @@
                             <td>5 Minutter (Pre-Call Forespørgsel)</td>
                             <td>5 min</td>
                             <td>120.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=5-Min%20Pre-Call%20Inquiry%20(Gem%20Experience)&currency_code=DKK&amount=120.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>15 Minutter</td>
                             <td>15 min</td>
                             <td>250.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=15-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=250.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>30 Minutter</td>
                             <td>30 min</td>
                             <td>450.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=30-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=450.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>50 Minutter (Standard)</td>
                             <td>50 min</td>
                             <td>650.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=50-Min%20Teknisk%20Konsultation%20(Gem%20Experience)&currency_code=DKK&amount=650.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>2 Timer (Rabat)</td>
                             <td>110 min (2x50 min konsultation + 10 min pause)</td>
                             <td>1250.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=2-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1250.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>3 Timer (Rabat)</td>
                             <td>170 min (3x50 min konsultation + 2x10 min pauser)</td>
                             <td>1800.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=3-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=1800.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>4 Timer (Rabat)</td>
                             <td>230 min (4x50 min konsultation + 3x10 min pauser)</td>
                             <td>2300.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=4-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=2300.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                         <tr>
                             <td>8 Timer (Heldags Rabat)</td>
                             <td>470 min (8x50 min konsultation + 7x10 min pauser)</td>
                             <td>4400.00</td>
-                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Check Ud / Book</a></td>
+                            <td><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=torbenscharling@gmail.com&item_name=8-Hour%20Technical%20Consultation%20(Gem%20Experience)&currency_code=DKK&amount=4400.00" class="button-small" target="_blank">Book</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <div class="note-important">
-                <strong>Booking Skema:</strong> Betaling er påkrævet forud for at sikre din tid. Efter betaling modtager du en bekræftelse og et direkte link til en kalender for at aftale dit møde (Teams/Zoom/etc.).
-            </div>
-            <p class="note">For at strømline din booking og give klienter et klart skema, anbefaler jeg kraftigt at tilmelde dig en tjeneste som Calendly eller Acuity. Du kan derefter erstatte instruktionerne ovenfor med et direkte link til din bookingside.</p>
+            <p class="note"><strong>Booking Skema:</strong> Betaling er påkrævet forud via PayPal. Efter betaling modtager du en bekræftelse og en direkte e-mail for at aftale tidspunktet. Du kan bruge personlige planlægningsværktøjer som Google Kalender eller iPhone Kalender til at styre din tilgængelighed.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Gem Experience. Kontakt: GemExperience@icloud.com</p>
+        <p>&copy; 2025 Gem Experience. Kontakt: GemExperience@icloud.com</p>
     </footer>
 </body>
 </html>
